<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_validation"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="121dp"
        android:text="@string/selamat_datang"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="61dp"
        android:text="@string/sertakan_gambar_profil_anda_n_untuk_melengkapi_profil"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/circle_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:srcCompat="@drawable/btn_add_photo"/>

    <EditText
        android:id="@+id/edt_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/masukan_nama"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@drawable/custom_button"
        android:text="@string/selesai"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_input" />


</androidx.constraintlayout.widget.ConstraintLayout>